force-app/main/default/objects/Service_Catalog__c/Service_Catalog__c.object-meta.xml
<CustomObject>
    <label>Service Catalog</label>
    <nameField>
        <label>Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>