force-app/main/default/objects/Service_Catalog__c/fields/Access_To__c.field-meta.xml
<CustomField>
    <fullName>Access_To__c</fullName>
    <label>Available To</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holiday Homes</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>