force-app/main/default/objects/Service_Catalog__c/fields/Permit_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Permit_Terms_and_Conditions__c</fullName>
    <label>Permit Terms and Conditions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>