force-app/main/default/objects/Service_Catalog__c/fields/Service_Available_on_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Service_Available_on_Mobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Available on Mobile</label>
    <type>Checkbox</type>
</CustomField>