force-app/main/default/objects/Service_Catalog__c/fields/Service_Image__c.field-meta.xml
<CustomField>
    <fullName>Service_Image__c</fullName>
    <formula>IMAGE( Image_URL__c , &apos;Service Image&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Image</label>
    <type>Text</type>
</CustomField>