force-app/main/default/objects/Service_Catalog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Access_To__c</columns>
    <columns>Active__c</columns>
    <columns>Service_Available_on_Mobile__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>